--- a/style.css
+++ b/style.css
@@ -33,4 +33,105 @@ header {
   font-size: 15px;
   line-height: 20px;
 }
-@
+
+
+.logo {
+    padding-left: 30px;
+  }
+  
+  .logo a {
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 20px;
+    text-decoration: none;
+    color: #fff;
+  }
+  
+  .date {
+    text-align: end;
+    margin-right: 10px;
+    font-family: 'Courier New', Courier, monospace;
+  }
+  
+  h1 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 25px;
+    font-weight: 400;
+    text-align: center;
+  }
+  
+  p {
+    font-size: 14px;
+    font-family: 'Lato', sans-serif;
+  }
+  
+  .added-book {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .added-booklist {
+    border: 2px solid black;
+  }
+  
+  #breaker {
+    width: 20%;
+    margin: 30px 40%;
+  }
+  
+  h2 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+  }
+  
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .btn {
+    margin-left: 200%;
+    box-shadow: 3px 3px #000;
+    padding: 5px;
+    font-size: 10px;
+    border: 2px solid #000;
+    font-weight: 700;
+  }
+  
+  #add-new {
+    display: none;
+  }
+  
+  #contact {
+    display: none;
+  }
+  
+  .contact-text {
+    text-align: center;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    line-height: 9vh;
+  }
+  
+  .contact-list {
+    padding-left: 35%;
+  }
+  
+  footer {
+    display: flex;
+    background: #3e3c3c;
+    color: white;
+    height: 52px;
+    font-size: 9px;
+    position: fixed;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    width: 95.5%;
+  }
+  
