--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- @import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Lato&family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Lato&family=Poppins&display=swap');
 
 * {
   margin: 10px;
@@ -135,3 +135,6 @@ header {
     width: 95.5%;
   }
   
+  body {
+      background-image: url(images/Featured-Image-1.webp);
+  }
